[gd_scene load_steps=8 format=3 uid="uid://d0mniyqf1at8e"]

[ext_resource type="Script" path="res://dev/DayTime/scripts/day_main.gd" id="1_jp6l8"]
[ext_resource type="PackedScene" uid="uid://dcw4xtglhssda" path="res://dev/DayTime/scenes/day_parent.tscn" id="2_eg5aa"]
[ext_resource type="PackedScene" uid="uid://cd0sx1sbvq076" path="res://dev/models/Gamejam_Frame_Cut-3DView-{3D}.fbx" id="2_q83fi"]
[ext_resource type="Script" path="res://dev/DayTime/scripts/queue_path.gd" id="3_xjqli"]

[sub_resource type="Curve3D" id="Curve3D_lg64r"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1.5, 0, 0, 0, 0, 0, 0, 0, 0, 1.5, 0, -2.5, 0, 0, 0, 0, 0, 0, 9, 0, -2.5, 0, 0, 0, 0, 0, 0, 9, 0, -3.5),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cjfnl"]

[sub_resource type="LabelSettings" id="LabelSettings_bv1vo"]
font_size = 32

[node name="DayMain" type="Node2D"]
script = ExtResource("1_jp6l8")
PASTRY_PRICE_BASE = 1

[node name="day_parent" parent="." instance=ExtResource("2_eg5aa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 6)

[node name="Inside" type="Node3D" parent="."]

[node name="Gamejam_Frame_Cut-3DView-{3D}" parent="Inside" instance=ExtResource("2_q83fi")]
visible = false

[node name="Camera3D" type="Camera3D" parent="Inside"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 22.7816, 2.77422, -1.77414)
fov = 45.0

[node name="OmniLight3D" type="OmniLight3D" parent="Inside"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.7079, 3.17801, 2.18535)
omni_range = 24.38

[node name="QueuePath" type="Path3D" parent="Inside"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0, 2.5)
curve = SubResource("Curve3D_lg64r")
script = ExtResource("3_xjqli")

[node name="Counter" type="Node3D" parent="Inside"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 1, -4.3)

[node name="GameUI" type="CanvasLayer" parent="."]
layer = 5
visible = false

[node name="Panel" type="Panel" parent="GameUI"]
visible = false
offset_right = 1152.0
offset_bottom = 648.0

[node name="IngredientLabel" type="Label" parent="GameUI"]
offset_left = 681.0
offset_top = 66.0
offset_right = 804.0
offset_bottom = 193.0
text = "Ingredients:
ingredient_1: 50
ingredient_2: 50
ingredient_3: 50
ingredient_4: 50"

[node name="ProductLabel" type="Label" parent="GameUI"]
offset_left = 692.0
offset_top = 505.0
offset_right = 801.0
offset_bottom = 528.0
text = "Items:"

[node name="CustomerLabel" type="Label" parent="GameUI"]
offset_left = 230.0
offset_top = 373.0
offset_right = 476.0
offset_bottom = 452.0
text = "Current Order: 
Patience:
Customers in line:
"

[node name="ServeButton" type="Button" parent="GameUI"]
offset_left = 523.0
offset_top = 479.0
offset_right = 661.0
offset_bottom = 551.0
text = "Serve"

[node name="ProgressLabel" type="Label" parent="GameUI"]
offset_left = 694.0
offset_top = 246.0
offset_right = 766.0
offset_bottom = 269.0
text = "Progress:"

[node name="ProgressBar" type="ProgressBar" parent="GameUI"]
offset_left = 703.0
offset_top = 284.0
offset_right = 956.0
offset_bottom = 316.0
max_value = 1.0
step = 0.0
show_percentage = false

[node name="AutoServeDisplay" type="Control" parent="GameUI"]
layout_mode = 3
anchors_preset = 0
offset_left = 210.0
offset_top = 554.0
offset_right = 452.0
offset_bottom = 625.0

[node name="Label3" type="Label" parent="GameUI/AutoServeDisplay"]
layout_mode = 0
offset_left = 1.0
offset_top = 9.0
offset_right = 85.0
offset_bottom = 32.0
text = "AutoServe:"

[node name="AutoServe" type="ProgressBar" parent="GameUI/AutoServeDisplay"]
layout_mode = 0
offset_left = -1.0
offset_top = 38.0
offset_right = 236.0
offset_bottom = 50.0
max_value = 1.0
step = 0.0
show_percentage = false

[node name="DayProgress" type="Label" parent="GameUI"]
offset_left = 25.0
offset_top = 14.0
offset_right = 131.0
offset_bottom = 37.0
text = "Day Progress:"

[node name="DayProgressBar" type="ProgressBar" parent="GameUI"]
offset_left = 18.0
offset_top = 48.0
offset_right = 389.0
offset_bottom = 78.0
step = 0.0
show_percentage = false

[node name="Quit" type="Button" parent="GameUI"]
offset_left = 15.0
offset_top = 601.0
offset_right = 113.0
offset_bottom = 639.0
text = "quit"

[node name="Trash" type="Button" parent="GameUI"]
offset_left = 516.0
offset_top = 565.0
offset_right = 665.0
offset_bottom = 631.0
text = "Trash"

[node name="Pastry" type="Button" parent="GameUI"]
offset_left = 681.0
offset_top = 375.0
offset_right = 783.0
offset_bottom = 450.0
text = "Pastry"

[node name="Coffee" type="Button" parent="GameUI"]
offset_left = 822.0
offset_top = 375.0
offset_right = 924.0
offset_bottom = 450.0
text = "Coffee"

[node name="Tea" type="Button" parent="GameUI"]
offset_left = 938.0
offset_top = 433.0
offset_right = 1040.0
offset_bottom = 508.0
text = "Tea"

[node name="Cake" type="Button" parent="GameUI"]
offset_left = 1012.0
offset_top = 541.0
offset_right = 1114.0
offset_bottom = 616.0
text = "Cake"

[node name="MorningUI" type="CanvasLayer" parent="."]

[node name="ShopMenu" type="PanelContainer" parent="MorningUI"]
offset_left = 171.0
offset_top = 56.0
offset_right = 986.0
offset_bottom = 570.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cjfnl")

[node name="Row" type="HBoxContainer" parent="MorningUI/ShopMenu"]
layout_mode = 2

[node name="Column1" type="VBoxContainer" parent="MorningUI/ShopMenu/Row"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MorningUI/ShopMenu/Row/Column1"]
layout_mode = 2
text = "Buy Stock"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Column2" type="VBoxContainer" parent="MorningUI/ShopMenu/Row"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MorningUI/ShopMenu/Row/Column2"]
layout_mode = 2
text = "Upgrade Recipes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Column3" type="VBoxContainer" parent="MorningUI/ShopMenu/Row"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MorningUI/ShopMenu/Row/Column3"]
layout_mode = 2
text = "Hire"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Column4" type="VBoxContainer" parent="MorningUI/ShopMenu/Row"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MorningUI/ShopMenu/Row/Column4"]
layout_mode = 2
text = "Current Resources"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Money" type="Label" parent="MorningUI"]
offset_left = 844.0
offset_top = 108.0
offset_right = 964.0
offset_bottom = 139.0
text = "Money: $100"

[node name="IngredientLabel" type="Label" parent="MorningUI"]
offset_left = 842.0
offset_top = 159.0
offset_right = 965.0
offset_bottom = 286.0
text = "Ingredients:
ingredient_1: 50
ingredient_2: 50
ingredient_3: 50
ingredient_4: 50"

[node name="StartDay" type="Button" parent="MorningUI"]
offset_left = 866.0
offset_top = 507.0
offset_right = 973.0
offset_bottom = 556.0
text = "Start Day"

[node name="DayOverUI" type="CanvasLayer" parent="."]
process_mode = 3
visible = false

[node name="Overview" type="PanelContainer" parent="DayOverUI"]
offset_left = 374.0
offset_top = 56.0
offset_right = 781.0
offset_bottom = 570.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cjfnl")

[node name="Column1" type="VBoxContainer" parent="DayOverUI/Overview"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="DayOverUI/Overview/Column1"]
layout_mode = 2
text = "Overview"
label_settings = SubResource("LabelSettings_bv1vo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="DayOverUI/Overview/Column1"]
layout_mode = 2

[node name="Label2" type="Label" parent="DayOverUI/Overview/Column1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = " Name of Stat"

[node name="Label3" type="Label" parent="DayOverUI/Overview/Column1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "### "
horizontal_alignment = 2

[node name="EndDay" type="Button" parent="DayOverUI"]
offset_left = 664.0
offset_top = 510.0
offset_right = 771.0
offset_bottom = 559.0
text = "End Day"

[node name="PauseMenu" type="CanvasLayer" parent="."]
layer = 15
follow_viewport_enabled = true

[connection signal="pressed" from="GameUI/ServeButton" to="." method="_start_serving_customer"]
[connection signal="pressed" from="GameUI/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="GameUI/Trash" to="." method="_on_trash_pressed"]
[connection signal="pressed" from="GameUI/Pastry" to="." method="_on_pastry_pressed"]
[connection signal="pressed" from="GameUI/Coffee" to="." method="_on_coffee_pressed"]
[connection signal="pressed" from="GameUI/Tea" to="." method="_on_tea_pressed"]
[connection signal="pressed" from="GameUI/Cake" to="." method="_on_cake_pressed"]
[connection signal="pressed" from="MorningUI/StartDay" to="." method="_on_start_day_pressed"]
[connection signal="pressed" from="DayOverUI/EndDay" to="." method="_on_end_day_pressed"]
